week5/dfyPyParse/dafnyParser.py
# Generated from dafny.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class dafnyParser ( Parser ):

    grammarFileName = "dafny.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'='", "'|'", "'{'", "'}'", "':'", 
                     "'('", "')'", "'['", "']'", "':='", "'=>'", "'::'", 
                     "';'", "<INVALID>", "<INVALID>", "'bool'", "'int'", 
                     "'real'", "'char'", "'string'", "'array'", "'map'", 
                     "'set'", "'multiset'", "'seq'", "'datatype'", "'trait'", 
                     "'class'", "'extends'", "'method'", "'function'", "'returns'", 
                     "'constructor'", "'Length'", "'if'", "'else'", "'then'", 
                     "'break'", "'continue'", "'while'", "'forall'", "'for'", 
                     "'to'", "'print'", "'match'", "'case'", "'assert'", 
                     "'decreases'", "'ensures'", "'requires'", "'reads'", 
                     "'modifies'", "'invariant'", "'var'", "'const'", "'new'", 
                     "'!'", "'-'", "'+'", "'%'", "'/'", "'*'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'==>'", "'<=='", "'<==>'", 
                     "'&&'", "'||'", "'in'", "'!in'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WHITESPACE", 
                      "COMMENT", "BOOL", "INT", "REAL", "CHAR", "STRING", 
                      "ARRAY", "MAP", "SET", "MULTISET", "SEQUENCE", "DATATYPE", 
                      "TRAIT", "CLASS", "EXTENDS", "METHOD", "FUNCTION", 
                      "RETURNS", "CONSTRUCTOR", "LENGTH", "IF", "ELSE", 
                      "THEN", "BREAK", "CONTINUE", "WHILE", "FORALL", "FOR", 
                      "TO", "PRINT", "MATCH", "CASE", "ASSERT", "DECREASES", 
                      "ENSURES", "REQUIRES", "READS", "MODIFIES", "INVARIANT", 
                      "VAR", "CONST", "NEW", "NOT", "NEG", "ADD", "MOD", 
                      "DIV", "MUL", "EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", 
                      "IMP", "RIMP", "IFF", "AND", "OR", "IN", "NOT_IN", 
                      "DOT", "BOOL_LITERAL", "INT_LITERAL", "REAL_LITERAL", 
                      "STRING_LITERAL", "CHAR_LITERAL", "UPPER_IDENTIFIER", 
                      "IDENTIFIER", "NON_DIGIT_ID_CHAR", "SPECIAL_CHAR", 
                      "ID_CHAR", "ESCAPED_CHAR", "CHAR_CHAR", "STRING_CHAR" ]

    RULE_boolLiteral = 0
    RULE_intLiteral = 1
    RULE_realLiteral = 2
    RULE_charLiteral = 3
    RULE_stringToken = 4
    RULE_unaryOperator = 5
    RULE_upperIdentifier = 6
    RULE_identifier = 7
    RULE_topDecl = 8
    RULE_genericInstantiation = 9
    RULE_type = 10
    RULE_arrayType = 11
    RULE_mapType = 12
    RULE_setType = 13
    RULE_multisetType = 14
    RULE_sequenceType = 15
    RULE_datatypeDecl = 16
    RULE_datatypeConstructor = 17
    RULE_classDecl = 18
    RULE_classMemberDecl = 19
    RULE_traitDecl = 20
    RULE_traitMemberDecl = 21
    RULE_functionSignatureDecl = 22
    RULE_methodSignatureDecl = 23
    RULE_fieldDecl = 24
    RULE_identifierType = 25
    RULE_parameters = 26
    RULE_functionDecl = 27
    RULE_methodDecl = 28
    RULE_constructorDecl = 29
    RULE_disj = 30
    RULE_expression = 31
    RULE_datatypeFieldUpdate = 32
    RULE_modulus = 33
    RULE_multisetConversion = 34
    RULE_literal = 35
    RULE_callParameters = 36
    RULE_functionCall = 37
    RULE_classInstantiation = 38
    RULE_datatypeInstantiation = 39
    RULE_ternaryExpression = 40
    RULE_matchExpression = 41
    RULE_caseExpression = 42
    RULE_arrayLength = 43
    RULE_index = 44
    RULE_setDisplay = 45
    RULE_setComprehension = 46
    RULE_sequenceDisplay = 47
    RULE_sequenceComprehension = 48
    RULE_mapConstructor = 49
    RULE_mapComprehension = 50
    RULE_indexElem = 51
    RULE_statement = 52
    RULE_assertStatement = 53
    RULE_breakStatement = 54
    RULE_continueStatement = 55
    RULE_declIdentifier = 56
    RULE_declAssignLhs = 57
    RULE_declAssignRhs = 58
    RULE_declarationLhs = 59
    RULE_declaration = 60
    RULE_assignmentLhs = 61
    RULE_assignment = 62
    RULE_print = 63
    RULE_voidMethodCall = 64
    RULE_sequence = 65
    RULE_matchStatement = 66
    RULE_caseStatement = 67
    RULE_ifStatement = 68
    RULE_forallStatement = 69
    RULE_forLoop = 70
    RULE_whileStatement = 71
    RULE_verifierAnnotation = 72
    RULE_decreases = 73
    RULE_ensures = 74
    RULE_invariant = 75
    RULE_modifies = 76
    RULE_reads = 77
    RULE_requires = 78
    RULE_arrayConstructor = 79
    RULE_arrayComprehension = 80
    RULE_arrayValues = 81
    RULE_topDeclMember = 82
    RULE_program = 83

    ruleNames =  [ "boolLiteral", "intLiteral", "realLiteral", "charLiteral", 
                   "stringToken", "unaryOperator", "upperIdentifier", "identifier", 
                   "topDecl", "genericInstantiation", "type", "arrayType", 
                   "mapType", "setType", "multisetType", "sequenceType", 
                   "datatypeDecl", "datatypeConstructor", "classDecl", "classMemberDecl", 
                   "traitDecl", "traitMemberDecl", "functionSignatureDecl", 
                   "methodSignatureDecl", "fieldDecl", "identifierType", 
                   "parameters", "functionDecl", "methodDecl", "constructorDecl", 
                   "disj", "expression", "datatypeFieldUpdate", "modulus", 
                   "multisetConversion", "literal", "callParameters", "functionCall", 
                   "classInstantiation", "datatypeInstantiation", "ternaryExpression", 
                   "matchExpression", "caseExpression", "arrayLength", "index", 
                   "setDisplay", "setComprehension", "sequenceDisplay", 
                   "sequenceComprehension", "mapConstructor", "mapComprehension", 
                   "indexElem", "statement", "assertStatement", "breakStatement", 
                   "continueStatement", "declIdentifier", "declAssignLhs", 
                   "declAssignRhs", "declarationLhs", "declaration", "assignmentLhs", 
                   "assignment", "print", "voidMethodCall", "sequence", 
                   "matchStatement", "caseStatement", "ifStatement", "forallStatement", 
                   "forLoop", "whileStatement", "verifierAnnotation", "decreases", 
                   "ensures", "invariant", "modifies", "reads", "requires", 
                   "arrayConstructor", "arrayComprehension", "arrayValues", 
                   "topDeclMember", "program" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    WHITESPACE=15
    COMMENT=16
    BOOL=17
    INT=18
    REAL=19
    CHAR=20
    STRING=21
    ARRAY=22
    MAP=23
    SET=24
    MULTISET=25
    SEQUENCE=26
    DATATYPE=27
    TRAIT=28
    CLASS=29
    EXTENDS=30
    METHOD=31
    FUNCTION=32
    RETURNS=33
    CONSTRUCTOR=34
    LENGTH=35
    IF=36
    ELSE=37
    THEN=38
    BREAK=39
    CONTINUE=40
    WHILE=41
    FORALL=42
    FOR=43
    TO=44
    PRINT=45
    MATCH=46
    CASE=47
    ASSERT=48
    DECREASES=49
    ENSURES=50
    REQUIRES=51
    READS=52
    MODIFIES=53
    INVARIANT=54
    VAR=55
    CONST=56
    NEW=57
    NOT=58
    NEG=59
    ADD=60
    MOD=61
    DIV=62
    MUL=63
    EQ=64
    NEQ=65
    LT=66
    LEQ=67
    GT=68
    GEQ=69
    IMP=70
    RIMP=71
    IFF=72
    AND=73
    OR=74
    IN=75
    NOT_IN=76
    DOT=77
    BOOL_LITERAL=78
    INT_LITERAL=79
    REAL_LITERAL=80
    STRING_LITERAL=81
    CHAR_LITERAL=82
    UPPER_IDENTIFIER=83
    IDENTIFIER=84
    NON_DIGIT_ID_CHAR=85
    SPECIAL_CHAR=86
    ID_CHAR=87
    ESCAPED_CHAR=88
    CHAR_CHAR=89
    STRING_CHAR=90

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BoolLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL_LITERAL(self):
            return self.getToken(dafnyParser.BOOL_LITERAL, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_boolLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolLiteral" ):
                return visitor.visitBoolLiteral(self)
            else:
                return visitor.visitChildren(self)




    def boolLiteral(self):

        localctx = dafnyParser.BoolLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_boolLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(dafnyParser.BOOL_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self):
            return self.getToken(dafnyParser.INT_LITERAL, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_intLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntLiteral" ):
                return visitor.visitIntLiteral(self)
            else:
                return visitor.visitChildren(self)




    def intLiteral(self):

        localctx = dafnyParser.IntLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_intLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(dafnyParser.INT_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RealLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL_LITERAL(self):
            return self.getToken(dafnyParser.REAL_LITERAL, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_realLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRealLiteral" ):
                return visitor.visitRealLiteral(self)
            else:
                return visitor.visitChildren(self)




    def realLiteral(self):

        localctx = dafnyParser.RealLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_realLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(dafnyParser.REAL_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR_LITERAL(self):
            return self.getToken(dafnyParser.CHAR_LITERAL, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_charLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharLiteral" ):
                return visitor.visitCharLiteral(self)
            else:
                return visitor.visitChildren(self)




    def charLiteral(self):

        localctx = dafnyParser.CharLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_charLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(dafnyParser.CHAR_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringTokenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(dafnyParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_stringToken

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringToken" ):
                return visitor.visitStringToken(self)
            else:
                return visitor.visitChildren(self)




    def stringToken(self):

        localctx = dafnyParser.StringTokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stringToken)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(dafnyParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(dafnyParser.NOT, 0)

        def NEG(self):
            return self.getToken(dafnyParser.NEG, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_unaryOperator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryOperator" ):
                return visitor.visitUnaryOperator(self)
            else:
                return visitor.visitChildren(self)




    def unaryOperator(self):

        localctx = dafnyParser.UnaryOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unaryOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            _la = self._input.LA(1)
            if not(_la==58 or _la==59):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpperIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPPER_IDENTIFIER(self):
            return self.getToken(dafnyParser.UPPER_IDENTIFIER, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_upperIdentifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpperIdentifier" ):
                return visitor.visitUpperIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def upperIdentifier(self):

        localctx = dafnyParser.UpperIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_upperIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(dafnyParser.UPPER_IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(dafnyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = dafnyParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(dafnyParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def datatypeDecl(self):
            return self.getTypedRuleContext(dafnyParser.DatatypeDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(dafnyParser.ClassDeclContext,0)


        def traitDecl(self):
            return self.getTypedRuleContext(dafnyParser.TraitDeclContext,0)


        def topDeclMember(self):
            return self.getTypedRuleContext(dafnyParser.TopDeclMemberContext,0)


        def getRuleIndex(self):
            return dafnyParser.RULE_topDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDecl" ):
                return visitor.visitTopDecl(self)
            else:
                return visitor.visitChildren(self)




    def topDecl(self):

        localctx = dafnyParser.TopDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_topDecl)
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.datatypeDecl()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.classDecl()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 3)
                self.state = 186
                self.traitDecl()
                pass
            elif token in [31, 32]:
                self.enterOuterAlt(localctx, 4)
                self.state = 187
                self.topDeclMember()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenericInstantiationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(dafnyParser.LT, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dafnyParser.TypeContext)
            else:
                return self.getTypedRuleContext(dafnyParser.TypeContext,i)


        def GT(self):
            return self.getToken(dafnyParser.GT, 0)

        def getRuleIndex(self):
            return dafnyParser.RULE_genericInstantiation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenericInstantiation" ):
                return visitor.visitGenericInstantiation(self)
            else:
                return visitor.visitChildren(self)




    def genericInstantiation(self):

        localctx = dafnyParser.GenericInstantiationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_genericInstantiation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.match(dafnyParser.LT)
            self.state = 191
            self.type_()
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 192
                self.match(dafnyParser.T__0)
                self.state = 193
                self.type_()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 199
            self.match(dafnyParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(dafnyParser.INT, 0)

        def CHAR(self):
            return self.getToken(dafnyParser.CHAR, 0)

        def REAL(self):
            return self.getToken(dafnyParser.REAL, 0)

        def BOOL(self):
            return self.getToken(dafnyParser.BOOL, 0)

        def STRING(self):
            return self.getToken(dafnyParser.STRING, 0)

        def arrayType(self):
            return self.getTypedRuleContext(dafnyParser.ArrayTypeContext,0)


        def mapType(self):
            return self.getTypedRuleContext(dafnyParser.MapTypeContext,0)


        def setType(self):
            return self.getTypedRuleContext(dafnyParser.SetTypeContext,0)


        def multisetType(self):
            return self.getTypedRuleContext(dafnyParser.MultisetTypeContext,0)


        def sequenceType(self):
            return self.getTypedRuleContext(dafnyParser.SequenceTypeContext,0)


        def upperIdentifier(self):
            return self.getTypedRuleContext(dafnyParser.UpperIdentifierContext,0)


        def getRuleIndex(self):
            return dafnyParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = dafnyParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        try:
            self.state = 212
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.match(dafnyParser.INT)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 202
                self.match(dafnyParser.CHAR)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 203
                self.match(dafnyParser.REAL)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 204
                self.match(dafnyParser.BOOL)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 205
                self.match(dafnyParser.STRING)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 6)
                self.state = 206
                self.arrayType()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 7)
                self.state = 207
                self.mapType()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 8)
                self.state = 208
                self.setType()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 9)
                self.state = 209
                self.multisetType()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 10)
                self.state = 210
                self.sequenceType()
                pass
            elif token in [83]:
                self.enterOuterAlt(localctx, 11)
                self.state = 211
                self.upperIdentifier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'
